# FrenchQuiz

./: .clang-format  .gitignore  CMakeLists.txt  TODO.txt  index.html
dbs/: gen-lessons.py  gen-prdgms.py  generate3.py  paradigms.db  recognitions.db  update-pdgm.py  wordlist.txt  words-by-chapter.txt
dbs/chapters/: 01.txt  02.txt  03.txt  04.txt  05.txt  06.txt  gen-lessons.py
site/: chapters.html  frqz.css  help.html  paradigms.js  productions.html  productions.js  recognitions.js
src-common/: Utils.h
src-pdgm/: Conjugation.cpp  Conjugation.h  DbManager.h  Label.h  ParadigmDbm.cpp  ParadigmDbm.h  Pdgm.h  PdgmApp.cpp  PdgmApp.h  main.cpp  oldLabel.h
src-prdn/: DbManager.h  PrdnApp.cpp  PrdnApp.h  Prompt.cpp  Prompt.h  main.cpp
src-rcgn/: DbManager.cpp  DbManager.h  Label.h  QuizItem.cpp  QuizItem.h  RcgnApp.cpp  RcgnApp.h  main.cpp
